# ArkProbe

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
arkprobe/: __init__.py  cli.py
arkprobe/analysis/: bottleneck_analyzer.py  comparator.py  design_space.py  feature_extractor.py  optimization_analyzer.py  scalability_analyzer.py
arkprobe/benchmarks/: README.md  app_workload_benchmark.sh  compare_results.py  hotspot_benchmark.sh  jvm_load_test.sh  real_workload_benchmark.sh
arkprobe/benchmarks/java/: AppWorkloadBench.java  HotspotBench.java  RealWorkloadBench.java  arkprobe_appworkload.cpp  arkprobe_hotspot.cpp  arkprobe_realworkload.cpp
arkprobe/collectors/: arm_events.py  base.py  collector_orchestrator.py  ebpf_collector.py  jfr_collector.py  perf_collector.py  system_collector.py
arkprobe/hotspot/: __init__.py  accelerator.py  models.py
arkprobe/hotspot/analyzer/: __init__.py  pattern_matcher.py
arkprobe/hotspot/codegen/: __init__.py  cpp_generator.py
arkprobe/hotspot/compiler/: __init__.py  compiler.py
arkprobe/hotspot/profiler/: __init__.py  bytecode_extractor.py  jfr_hotspot.py
arkprobe/hotspot/runtime/: __init__.py  jni_loader.py
arkprobe/model/: enums.py  feature_vector.py  schema.py
arkprobe/reports/: charts.py  generator.py
arkprobe/reports/sections/: __init__.py  cross_scenario.py  design_recommendations.py  executive_summary.py  optimization_recommendations.py  scenario_deep_dive.py
arkprobe/reports/templates/: report_base.html
arkprobe/scenarios/: loader.py
arkprobe/scenarios/builtin/: compress.yaml  compute_intensive.yaml  crypto.yaml  database_oltp.yaml  jvm_general.yaml  (+8 more)
arkprobe/tuner/: __init__.py  comparator.py  gem5_tuner.py  hardware_tuner.py
arkprobe/utils/: platform_detect.py  process.py  units.py  validate.py
arkprobe/workloads/: __init__.py  build.py  fallback.py
data/: h265_encode_features.json  mysql_oltp_features.json  spark_batch_features.json
docs/: hotspot_acceleration.md
tests/fixtures/: sample_ebpf_output.json  sample_perf_stat.json
tests/test_analysis/: test_analysis.py  test_jvm_bottleneck.py  test_jvm_feature_extractor.py  test_jvm_tuning_rules.py  test_optimization.py
tests/test_collectors/: test_ebpf.py  test_jfr_collector.py
tests/test_deps/: test_checker.py
tests/test_hotspot/: test_codegen.py  test_e2e_integration.py  test_hotspot_models.py  test_pattern_matcher.py
tests/test_model/: test_jvm_models.py  test_schema.py
tests/test_scenarios/: test_loader_fuzzy_matching.py
tests/test_tuner/: __init__.py  test_gem5_tuner.py  test_hardware_tuner.py
tests/test_workloads/: test_build.py
(+32 files in other folders)
